# pantunify

./: .gitignore  LICENSE  README.md  classify_merged.py  package.json  parse.py  prompt.md  pyproject.toml  requirements.txt  test.py
data/: 1.txt  2.txt  3.txt  4.txt  5.txt  dataset_eksperimen.csv  excluded_pantun_dataset.csv  fail.txt  fail.txt.bak.20260603-094255  fail.txt.bak.20260608-115006  manual_validation_first50_errors.csv  manual_validation_first50_stats.csv  manual_validation_first50_stats_after_fix.csv  merged.txt  ok.txt  ok.txt.bak.20260603-092038  ok.txt.bak.20260603-094255  ok.txt.bak.20260608-111519  pantun_dataset.csv  pantun_dataset_manual_validation_sample_200.csv  pantun_dataset_sample_100.csv  pantun_dataset_silabel_gt12.csv  reason_counts.csv
data/ai_sampiran/: chatgpt-5-5-thinking.csv  chatgpt-5-5-thinking.xlsx  claude-opus-4.6.csv  claude-opus-4.6.xlsx  deepseek-r1.csv  deepseek-r1.xlsx  gemini-3.csv  gemini-3.xlsx  llama2.1.csv  llama2.1.xlsx  sailor-2.csv  sailor-2.xlsx
dataset/: 1.txt  fail.txt  merged.txt  merged.txt.bak.20260331-103343  ok.txt
figures/: dataset_summary.json
scripts/: average_gemini_score.py  calc_dataset_stats.py  chart_generate.py  clean_merge.py  count_pantun.py  extract_isi.py  fail_txt_to_csv.py  generate_reason_counts.py  merge_dataset.py  ok_txt_to_csv.py  rebuild_fail_txt.py  rebuild_merged_txt.py  rebuild_ok_txt.py
scripts/art1/: evaluate_ai.py  llm_judge.py  semantic_baseline_all.py
src/pantunify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
tests/: test_core.py  test_last_syllable.py
(+4 files in other folders)
